src/objects/Test_Case_Step__c.object
<CustomObject>
    <description>This Object is created to store the each step of test case for better reporting and auditing purporse</description>
    <fields>
        <fullName>Actual_Result__c</fullName>
        <description>This field is created to store the Actual Result for test case step</description>
        <label>Actual Result</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Call_Sequence__c</fullName>
        <description>This field is created to store the call sequence for test case step which users will enter upon creating</description>
        <label>Call Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field is created to store the Comments for test case step</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <inlineHelpText>The results that expected.  Enter up to 255 characters.</inlineHelpText>
        <label>Expected Results</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Post_Condition__c</fullName>
        <description>This field is created to store the Post condition result for test case step</description>
        <label>Post Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is created to store the Status for test case step</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Case_Summary__c</fullName>
        <description>This field is created to show the test case summary</description>
        <formula>Test_Case__r.Test_Case_Summary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Case Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to relate Test case step with test case</description>
        <label>Test Case</label>
        <referenceTo>Test_Case__c</referenceTo>
        <relationshipLabel>Test Case Steps</relationshipLabel>
        <relationshipName>Test_Case_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Step_Data__c</fullName>
        <description>This field is created to store the test step data</description>
        <label>Test Step Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Step_Summary__c</fullName>
        <description>This field is created to store the test step summary</description>
        <label>Test Step Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Step_Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to relate the user testing this test step</description>
        <label>Test Step Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Case_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Case Step</label>
    <nameField>
        <displayFormat>TCS-{0000000}</displayFormat>
        <label>Test Case Step Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Case Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>